Fix overlapping of close button with scrollbar (#878)

--- a/src/notification/bar.scss
+++ b/src/notification/bar.scss
@@ -52,6 +52,7 @@ img {
     height: 15px;
     display: block;
     padding: 5px 0;
+    margin-right: 10px;
 }
 
 button:not(.link) {
